--- a/themes/my-first/layouts/partials/head.html
+++ b/themes/my-first/layouts/partials/head.html
@@ -2,4 +2,5 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/styles.css">
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
