--- a/themes/my-first/layouts/partials/footer.html
+++ b/themes/my-first/layouts/partials/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer">
-    <p>Last updated: {{ .Lastmod.Format "January 2, 2006 15:04" }}</p>
+    <p>{{ .Data.footer.title }}</p>
+    <p>{{ .Site.Data.footer.title }}</p>
     <script src="{{ .Site.BaseURL }}js/scripts.js"></script>
 </footer>
